// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ButtonIcon snapshots > should render ButtonIcon 1`] = `
<DocumentFragment>
  <div
    class="ButtonIcon"
    data-test-button-icon=""
    data-test-tooltip=""
  >
    <div
      class="Icon Icon--neutral-1"
      data-test-icon="close"
      height="12"
      name="Close"
      width="12"
    />
  </div>
</DocumentFragment>
`;

exports[`ButtonIcon snapshots > should render when is selected 1`] = `
<DocumentFragment>
  <div
    class="ButtonIcon ButtonIcon--selected"
    data-test-button-icon=""
    data-test-tooltip=""
  >
    <div
      class="Icon Icon--blue-1"
      data-test-icon="close"
      height="12"
      name="Close"
      width="12"
    />
  </div>
</DocumentFragment>
`;

exports[`ButtonIcon snapshots > should render with popover 1`] = `
<DocumentFragment>
  <div
    class="ButtonIcon"
    data-test-button-icon=""
    data-test-tooltip=""
  >
    <div
      class="Icon Icon--neutral-1"
      data-test-icon="close"
      height="12"
      name="Close"
      width="12"
    />
    <div
      class="ButtonIconPopover"
    >
      <div
        class="Popover Popover--bg-neutral5"
        data-test-popover="popover"
        style="left: 0px; top: 0px;"
      >
        <div
          class="PopoverSeparator"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;
